2008-10-29  Philip Withnall  <philip@tecnocode.co.uk>

	* src/backend/video-utils.c (totem_time_to_string): Use C_() instead
	of Q_() to separate translation context from strings.
	(Closes: #513627)

============ Version 2.24.3

2008-10-26  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.24.3

2008-10-25  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.py: Patch from Matthew Adams
	<roguestar191@comcast.net> to use read() instead of readline() when
	searching for the t-param in YouTube searches, in order to reduce the
	number of regexp searches.

2008-10-25  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.py: Fix YouTube plugin behaviour when
	attempting to perform multiple searches simultaneously, and fix some
	threading problems where GTK+ functions were being called from a
	spawned thread. (Closes: #557470)

2008-10-24  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.py: Remove redundant HTTP request
	when loading search results.

2008-10-24  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.py: Update the YouTube URL resolution
	code to work with Google's latest updates to YouTube.
	(Closes: #557681)

2008-10-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (seek_slider_pressed_cb), (seek_slider_released_cb):
	Add hack from Rhythmbox to force the behaviour of the left-click
	button to skip directly to the position we clicked, as if we were
	using the middle-button click (Closes: #129671)

2008-10-22  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui: Remove accelerators for the window resize
	menu items, they were causing problems with the latest GTK+
	whenever the sidebar was used (Closes: #557447)

2008-10-22  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (seek_slider_pressed_cb): Don't show seeking to
	label when we can direct seek (Closes: #338390)

2008-10-21  Bastien Nocera  <hadess@hadess.net>
