@@ -1,5 +1,10 @@
 2008-10-29  Philip Withnall  <philip@tecnocode.co.uk>
 
+	* src/backend/video-utils.c (totem_time_to_string): Revert previous
+	commit, which broke string freeze.
+
+2008-10-29  Philip Withnall  <philip@tecnocode.co.uk>
+
 	* src/backend/video-utils.c (totem_time_to_string): Use C_() instead
 	of Q_() to separate translation context from strings.
 	(Closes: #513627)
